# hsr_task_common

./: CMakeLists.txt  README.md  package.xml
cfg/: AdditionalRqt.cfg
config/: hsrb_display.rviz  ocs_ui_button_layout.yaml  ocs_ui_radio_button_layout.yaml  rqt_ui.perspective
launch/: hsr_hackathon.launch  keyboard_teleop_pr2.launch  keyboard_teleop_turtlebot.launch  ui.launch
msg/: SimpleTime.msg  UiOut.msg
scripts/: get_sound.sh  hsr_task_main.py  hsr_util.py  hsr_yuusyoku.py  message_publish_terminal.py  play_sound.sh  script_interface.py  ui_publisher.py
scripts/satueiyou_demo/: hsr_hutonkake.py  hsr_kitaku.py  hsr_syuusin.py  hsr_yuusyoku_kansou.py
