<?xml version="1.0"?>
<package>
  <name>hsr_task_common</name>
  <version>0.0.0</version>
  <description>The hsr task common</description>

  <maintainer email="ohara@jsk.imi.i.u-tokyo.ac.jp">Yu Ohara</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
