<?xml version="1.0"?>
<package>
  <name>hsr_task_common</name>
  <version>0.0.0</version>
  <description>The hsr task common</description>

  <maintainer email="ohara@jsk.imi.i.u-tokyo.ac.jp">Yu Ohara</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <export>
  </export>
</package>
